# tidevice

./: .gitignore  DEVELOP.md  MANIFEST.in  PROTOCOL.md  README.md  README_CN.md  README_EN.md  publish.sh  requirements.txt  setup.cfg  setup.py  setup_dev.sh  upload-pypi.sh
.github/workflows/: coverage.yml  main.yml  publish-to-test-pypi.yml  release.yml
examples/: get_bundle_id_from_ipa.py  read_properties.py
scripts/: ipa_sign.sh  plistdump-tcp-proxy.py  requirements.txt  run-usbmuxd-proxy.sh  simple-capture.sh  uitest_screenrecord.py
tests/: conftest.py  runtest.sh  test_api.py  test_device.py  test_ipautil.py  test_types.py  test_usbmux.py  test_utils.py
tests/testdata/: WebDriverAgentRunner.ipa.REMOVED.git-id
tidevice/: __init__.py  __main__.py  _ca.py  _compat.py  _crash.py  _device.py  _hexdump.py  _imagemounter.py  _installation.py  _instruments.py  _ipautil.py  _perf.py  _proto.py  _relay.py  _safe_socket.py  _ssl.py  _sync.py  _types.py  _usbmux.py  _utils.py  _version.py  _wdaproxy.py  api.py  bplist.py  datatypes.py  exceptions.py  plistlib2.py  requests_usbmux.py  session.py  struct2.py
