[metadata]
name = tidevice
author = 圣翔
author-email = codeskyblue@gmail.com
summary = 
license = MIT
#description-file = README.md
home-page = https://github.com/alibaba/tidevice
# all classifier can be found in https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Testing

[files]
packages =
	tidevice 

[entry_points]
# https://docs.openstack.org/pbr/3.1.1/#entry-points
console_scripts = 
    tidevice = tidevice.__main__:main
