[metadata]
name = tidevice
author = 圣翔
author-email = codeskyblue@gmail.com
summary = 
license = MIT
#description-file = README.md
home-page = https://github.com/alibaba/tidevice
# all classifier can be found in https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Testing

[files]
packages =
	tidevice 

[extras]
# pyOpenSSL requires cryptography which only have cp36.whl on windows
openssl =
    pyOpenSSL
    pyasn1
    
[entry_points]
# https://docs.openstack.org/pbr/3.1.1/#entry-points
console_scripts = 
    tidevice = tidevice.__main__:main


[flake8]
max-line-length = 88
exclude = tests/*
max-complexity = 10
ignore =
    W292,
    E501,
    F841,
    F401,
    E126,
    W605,
    E402,
    # ambiguous variable name 'l'cornflakes(E741)
    E741,
    # do not use bare 'except'cornflakes(E722)
    E722,
    # 'from models.common import *' used; unable to detect undefined namescornflakes(F403)
    F403,
    # F812: list comprehension redefines ...
    F812,
    # H101: Use TODO(NAME)
    H101,
    # H202: assertRaises Exception too broad
    H202,
    # H233: Python 3.x incompatible use of print operator
    H233,
    # H301: one import per line
    H301,
    # H306: imports not in alphabetical order (time, os)
    H306,
    # H401: docstring should not start with a space
    H401,
    # H403: multi line docstrings should end on a new line
    H403,
    # H404: multi line docstring should start without a leading new line
    H404,
    # H405: multi line docstring summary not separated with an empty line
    H405,
    # H501: Do not use self.__dict__ for string formatting
    H501,
    # Function is too complex (C901)
    C901